@@ -7,6 +7,7 @@ no Front-Cover Texts, and no Back-Cover Texts. A copy of the license is included
 in the sources of this package and additionally can be obtained from Internet
 <https://www.gnu.org/licenses>.
 
+* [2018-08-28] RFC4880: added tmcg_openpgp_revcode_t
 * [2018-08-24] RFC4880: added types and parameters for Notation Data
 * [2018-08-23] RFC4880: added StandaloneHash[V3]() and PacketBodyExtract()
 * [2018-08-23] RFC4880: added PacketSigPrepareTimestampSignature()
@@ -69,7 +70,7 @@ in the sources of this package and additionally can be obtained from Internet
 * [2018-02-18] RFC4880: fixes format from "%M" to "%b" in gcry_sexp_build()
 * [2018-02-11] RFC4880: added TMCG_OpenPGP_Signature, ..., TMCG_OpenPGP_Pubkey
 * [2018-02-11] RFC4880: added PacketContextRelease() and PublicKeyBlockParse()
-* [2018-02-11] RFC4880: unified name space of some types (e.g. tmcg_byte_t)
+* [2018-02-11] RFC4880: unified namespace of some types (e.g. tmcg_openpgp_)
 * [2018-02-10] added function mpz_lprime_prefix() for k-prefix tweak
 * [2018-02-10] improved strength of oracle hash function g() by second algo
 * [2018-02-10] raised the requirement of libgcrypt version to >= 1.7.0
@@ -77,7 +78,7 @@ in the sources of this package and additionally can be obtained from Internet
 * [2018-02-08] release 1.3.11 of LibTMCG
 * [2018-01-26] init_libTMCG(): added libgcrypt self-test
 * [2018-01-26] init_libTMCG(): check for already initialized libgcrypt
-* [2018-01-23] RFC4880: introduced new enumeration type tmcg_armor_t
+* [2018-01-23] RFC4880: introduced new enumeration type tmcg_openpgp_armor_t
 * [2018-01-22] RFC4880: added hash truncation for AsymmetricSignDSA()
 * [2018-01-21] RFC4880: added KeyRevocationHashV3()
 * [2018-01-16] RFC4880: increased buffer length for very large key sizes
